--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
     </div>
 
-    <script src="/TabUI/assets/js/main.js"></script>
+    <script src="TabUI/assets/js/main.js"></script>
 
 </body>
 </html>
